[gd_scene load_steps=3 format=3 uid="uid://main_menu_scene"]

[ext_resource type="Script" path="res://scenes/menu/main_menu.gd" id="1_script"]
[ext_resource type="Theme" path="res://assets/themes/game_theme.tres" id="2_theme"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.12, 0.075, 0.035, 1)

[node name="BackgroundPattern" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = null

[node name="DecorationTop" type="ColorRect" parent="BackgroundPattern"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
color = Color(0.545, 0.271, 0.075, 0.3)

[node name="DecorationBottom" type="ColorRect" parent="BackgroundPattern"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.545, 0.271, 0.075, 0.3)

[node name="BorderLeft" type="ColorRect" parent="BackgroundPattern"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 8.0
grow_vertical = 2
color = Color(0.722, 0.525, 0.043, 0.8)

[node name="BorderRight" type="ColorRect" parent="BackgroundPattern"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.722, 0.525, 0.043, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="TitleContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6)
theme_override_font_sizes/font_size = 96
text = "中国象棋"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 0.8)
theme_override_font_sizes/font_size = 28
text = "Chinese Chess"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PvPButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(280, 70)
layout_mode = 2
size_flags_horizontal = 4
text = "双人对弈"

[node name="PvEButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(280, 70)
layout_mode = 2
size_flags_horizontal = 4
text = "人机对战"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(280, 70)
layout_mode = 2
size_flags_horizontal = 4
text = "退出游戏"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -40.0
offset_right = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.6, 0.55, 0.45, 0.6)
theme_override_font_sizes/font_size = 16
text = "v1.0"
horizontal_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
